src/test/deca/test_compilateur/context/invalid/created/binary_exp/op_arith/minus_float_A.deca
// Description :
//    test minus entre un float et un A
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 11: (3.33) L’opérande gauche est de type float, L’opérande droite est de type A. Or les types des opérandes doivent être ‘int’ ou ‘float’ pour l’opérateur -
class A{}
{
float a;
A b;
int c = a - b;
}
